FP-2026-51CAD3: AI implementation